--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               <td><button class="btn__operator" id="-">-</button></td>
             </tr>
             <tr>
-              <td><button class="btn__number" id="7">4</button></td>
-              <td><button class="btn__number" id="8">5</button></td>
-              <td><button class="btn__number" id="9">6</button></td>
+              <td><button class="btn__number" id="4">4</button></td>
+              <td><button class="btn__number" id="5">5</button></td>
+              <td><button class="btn__number" id="6">6</button></td>
               <td><button class="btn__operator" id="+">+</button></td>
             </tr>
             <tr>
@@ -44,7 +44,7 @@
             <tr>
               <td><button class="btn__operator" id="(">(</button></td>
               <td><button class="btn__number" id="0">0</button></td>
-              <td><button class="btn__operator" id="(">)</button></td>
+              <td><button class="btn__operator" id=")">)</button></td>
             </tr>
           </table>
         </div>
